--- a/rtube/templates/400.html
+++ b/rtube/templates/400.html
@@ -63,7 +63,10 @@
                 font-size: 12px;
             }
         </style>
-    </head>
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
+</head>
     <body>
         <div class="error-container">
             <p class="error-code">400</p>
