--- a/rtube/templates/auth/register.html
+++ b/rtube/templates/auth/register.html
@@ -132,7 +132,10 @@
             .strength-good { background-color: #aacc00; width: 75%; }
             .strength-strong { background-color: #4CAF50; width: 100%; }
         </style>
-    </head>
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
+</head>
     <body>
         <div>
             <h1>Create Account</h1>
