--- a/rtube/templates/encoding/status.html
+++ b/rtube/templates/encoding/status.html
@@ -178,6 +178,9 @@
             display: none !important;
         }
     </style>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
 </head>
 
 <body>
