--- a/rtube/templates/encoding/upload.html
+++ b/rtube/templates/encoding/upload.html
@@ -155,7 +155,10 @@
                 background-color: #555;
             }
         </style>
-    </head>
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
+</head>
     <body>
         <div class="nav-links">
             <a href="/" class="back-link">&larr; Back to videos</a>
