--- a/rtube/templates/index.html
+++ b/rtube/templates/index.html
@@ -978,6 +978,9 @@
         var videoShortId = null;
         {% endif %}
     </script>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
 </head>
 
 <body>
