--- a/rtube/templates/500.html
+++ b/rtube/templates/500.html
@@ -146,6 +146,9 @@
             font-size: 12px;
         }
     </style>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
 </head>
 
 <body>
