--- a/rtube/templates/admin/change_password.html
+++ b/rtube/templates/admin/change_password.html
@@ -119,7 +119,10 @@
                 font-size: 12px;
             }
         </style>
-    </head>
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
+</head>
     <body>
         <div class="header">
             <a href="{{ url_for('admin.users') }}" class="back-link">&larr; Back to Users</a>
