--- a/rtube/templates/admin/videos.html
+++ b/rtube/templates/admin/videos.html
@@ -302,7 +302,10 @@
                 font-size: 12px;
             }
         </style>
-    </head>
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
+</head>
     <body>
         <div class="header">
             <div class="header-left">
