--- a/rtube/templates/auth/login.html
+++ b/rtube/templates/auth/login.html
@@ -147,7 +147,10 @@
                 background-color: #4752c4;
             }
         </style>
-    </head>
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
+</head>
     <body>
         <div>
             <h1>RTube Login</h1>
