--- a/rtube/templates/encoding/jobs.html
+++ b/rtube/templates/encoding/jobs.html
@@ -118,7 +118,10 @@
                 text-decoration: underline;
             }
         </style>
-    </head>
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
+</head>
     <body>
         <div class="header">
             <h1>Encoding Jobs</h1>
