--- a/rtube/templates/videos.html
+++ b/rtube/templates/videos.html
@@ -401,7 +401,10 @@
                 color: #fff;
             }
         </style>
-    </head>
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
+</head>
     <body>
         <div class="header">
             <div class="nav-left">
